Fix color contrast

--- a/src/app/public/modules/sample/sample.component.scss
+++ b/src/app/public/modules/sample/sample.component.scss
@@ -5,6 +5,6 @@
 }
 
 .my-lib-sample {
-  background-color: red;
+  background-color: darkred;
   color: $lib-text-color-primary;
 }
